[package]
name = "falling_sand"
version = "0.1.0-dev-snapshot"
authors = ["Konstantin Opora"]
default-run = "falling_sand"
edition = "2021"

[[bin]]
name = "falling_sand"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
# bevy = "0.12.1" # for release do not use dynamic linking

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
